direct var mapping - work in progress